fix: icon colors on dark mode

--- a/src/apps/public/00-adc-ui-library/src/components/icons/adc-icon-learning/adc-icon-learning.css
+++ b/src/apps/public/00-adc-ui-library/src/components/icons/adc-icon-learning/adc-icon-learning.css
@@ -2,7 +2,7 @@
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	color: rgb(93, 58, 47);
+	color: var(--c-primary);
 }
 
 .adc-icon {
